--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MyApp</string>
     <string name="textViewUserName">User name</string>
     <string name="textViewPassword">Password</string>
+    <string name="textViewHeader">Connection form</string>
 
     <string name="textFieldUserName">Name</string>
     <string name="textFieldPassword"></string>
