--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="menuLogout">Log out</string>
+
     <string name="app_name">MyApp</string>
     <string name="textViewUserName">User name</string>
     <string name="textViewPassword">Password</string>
@@ -9,4 +11,6 @@
 
     <string name="buttonSend">Send</string>
     <string name="buttonClear">Clear</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_nav">NavActivity</string>
 </resources>
